# carma-novatel-oem7-driver-wrapper

./: Dockerfile  README.md
.circleci/: config.yml
.github/workflows/: ci.yml  docker.yml  dockerhub.yml
.sonarqube/: sonar-scanner.properties
carma_novatel_driver_wrapper/: CMakeLists.txt  package.xml
carma_novatel_driver_wrapper/config/: parameters.yaml
carma_novatel_driver_wrapper/include/carma_novatel_driver_wrapper/: carma_novatel_driver_wrapper.hpp  carma_novatel_driver_wrapper_config.hpp
carma_novatel_driver_wrapper/launch/: carma-novatel-driver-wrapper-launch.py
carma_novatel_driver_wrapper/src/: carma_novatel_driver_wrapper.cpp  main.cpp
carma_novatel_driver_wrapper/test/: carma_novatel_driver_wrapper_test.cpp
docker/: build-image.sh  checkout.bash  get-component-version.sh  get-image-name.sh  get-repo-name.sh  get-system-version.sh  install.sh  system_release.sh
docker/.sonarqube/: sonar-scanner.properties
hooks/: pre_build
